# transcribe.cpp

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  THIRD-PARTY-LICENSES.md  pyproject.toml
bindings/python/: README.md  pyproject.toml
bindings/python-native-cu12/: README.md  pyproject.toml
bindings/python-native-cu12/transcribe_cpp_native_cu12/: __init__.py
bindings/python/_generate/: README.md  check_version_sync.py  generate.py
bindings/python/examples/: stream_wav.py  transcribe_wav.py
bindings/python/tests/: conftest.py  test_abi.py  test_backends.py  test_device_select.py  test_errors.py  test_example.py  test_family_ext.py  test_lifetime.py  test_pcm.py  test_provider_discovery.py  test_streaming.py  test_transcribe.py  test_utf8_paths.py
bindings/rust/: Cargo.toml  README.md
bindings/rust/src/: lib.rs
bindings/rust/sys/: Cargo.toml  README.md  build.rs
bindings/rust/transcribe-cpp/: Cargo.toml  README.md  build.rs
bindings/rust/xtask/: Cargo.toml
examples/: CMakeLists.txt
examples/bench/: CMakeLists.txt  batch_bench.cpp
examples/cli/: CMakeLists.txt  main.cpp
examples/common/: CMakeLists.txt  dr_wav.h  wav.cpp  wav.h
examples/hello/: CMakeLists.txt  main.c
examples/hello_stream/: CMakeLists.txt  main.c
examples/mic_stream/: CMakeLists.txt  main.c
scripts/envs/gigaam-multilingual/: pyproject.toml
scripts/envs/moss/: pyproject.toml
scripts/envs/parakeet/: pyproject.toml
scripts/envs/vibevoice/: pyproject.toml
src/: CMakeLists.txt  transcribe-abi.h  transcribe-arch.cpp  transcribe-arch.h  transcribe-backend.cpp  transcribe-backend.h  transcribe-batch-util.cpp  transcribe-batch-util.h  transcribe-bin-loader.cpp  transcribe-bin-loader.h  transcribe-context.h  transcribe-debug.cpp  transcribe-debug.h  transcribe-env.cpp  transcribe-env.h  transcribe-flash-policy.cpp  transcribe-flash-policy.h  transcribe-kaldi-fbank.cpp  transcribe-kaldi-fbank.h  transcribe-load-common.cpp  transcribe-load-common.h  transcribe-loader.cpp  transcribe-loader.h  transcribe-log.h  transcribe-mel.cpp  transcribe-mel.h  transcribe-meta.cpp  transcribe-meta.h  transcribe-model.cpp  transcribe-model.h  transcribe-path.h  transcribe-session.h  transcribe-tokenizer.cpp  transcribe-tokenizer.h  transcribe-unicode-data.cpp  transcribe-unicode.cpp  transcribe-unicode.h  transcribe-weights-util.cpp  transcribe-weights-util.h  transcribe.cpp
src/arch/canary/: canary.h  capabilities.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  model.cpp  weights.cpp  weights.h
src/arch/canary_qwen/: canary_qwen.h  capabilities.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  model.cpp  weights.cpp  weights.h
src/arch/cohere/: capabilities.cpp  cohere.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  model.cpp  weights.cpp  weights.h
src/arch/funasr_nano/: adaptor.cpp  adaptor.h  capabilities.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  frontend.cpp  frontend.h  funasr_nano.h  model.cpp  weights.cpp  weights.h
src/arch/gigaam/: capabilities.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  gigaam.h  mel.cpp  mel.h  model.cpp  weights.cpp  weights.h
src/arch/granite/: capabilities.cpp  decoder.cpp  decoder.h  diarize.cpp  diarize.h  encoder.cpp  encoder.h  granite.h  model.cpp  projector.cpp  projector.h  weights.cpp  weights.h
src/arch/granite_nar/: capabilities.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  granite_nar.h  model.cpp  projector.cpp  projector.h  weights.cpp  weights.h
src/arch/medasr/: capabilities.cpp  encoder.cpp  encoder.h  medasr.h  (+5 more)
src/causal_lm/: causal_lm.cpp  causal_lm.h
src/conformer/: conformer.cpp  conformer.h
src/granite_conformer/: shaw_attn.cpp  shaw_attn.h
src/qwen3_lm/: qwen3_lm.cpp  qwen3_lm.h
src/sanm/: sanm.cpp  sanm.h
tests/: CMakeLists.txt  api_smoke.c  backend_classification_unit.cpp  backend_init_throw_unit.cpp  backend_init_unit.cpp  backend_metal_simdgroup_gate_unit.cpp  backend_probe_order_unit.cpp  batch_mask_unit.cpp  check_extension_umbrella.cmake  cohere_e2e_smoke.cpp  cohere_real_smoke.cpp  cohere_smoke.cpp  conv_pw_promote_unit.cpp  debug_dump_unit.cpp  decoder_smoke.cpp  encoder_smoke.cpp  frontend_smoke.cpp  granite_diarize_parser_unit.cpp  lint_teardown.cmake  loader_smoke.cpp  log_unit.cpp  mel_unit.cpp  moonshine_streaming_batch_truncation.cpp  moonshine_streaming_stream_parity.cpp  moss_diarize_parser_unit.cpp  parakeet_chunked_limited_window_mask_unit.cpp  parakeet_chunked_limited_with_rc_mask_unit.cpp  parakeet_real_smoke.cpp  parakeet_smoke.cpp  parakeet_stream_ext_reject_unit.cpp  qwen3_asr_batch_truncation.cpp  qwen3_asr_bpe_parity.cpp  qwen3_asr_e2e_smoke.cpp  qwen3_asr_real_smoke.cpp  qwen3_asr_real_smoke_0_6b.cpp  qwen3_asr_real_smoke_1_7b.cpp  qwen3_asr_smoke.cpp  run_dispatch_unit.cpp  sortformer_stream_ext_unit.cpp  stream_capability_unit.cpp  (+15 more)
tests/fixtures/: make_gguf_fixtures.py  qwen3_asr_bpe_parity.inc
tests/tolerances/: canary.json  canary_qwen.json  cohere.json  funasr_nano.json  gigaam-multilingual.json  gigaam.json  granite.json  granite_nar.json  medasr.json  moonshine-base.provisional.json  moonshine.json  moonshine_streaming.json  moss.json  multitalker-parakeet-streaming-0.6b-v1.json  multitalker-parakeet-streaming-0.6b-v1.streaming.json  nemotron-3.5-asr-streaming-0.6b.json  nemotron-speech-streaming-en-0.6b.json  nemotron-speech-streaming-en-0.6b.streaming.json  parakeet-nemo.json  parakeet.json  qwen3_asr-1.7b.json  qwen3_asr.json  sensevoice.json  sortformer.json  vibevoice.json  voxtral.json  voxtral_realtime.json  whisper-base.en.json  whisper-base.json  whisper-large-v2.json  whisper-large-v3-turbo.json  whisper-large-v3.json  whisper-large.json  whisper-medium.en.json  whisper-medium.json  whisper-small.en.json  whisper-small.json  whisper-tiny.en.json  whisper-tiny.json  whisper.json
tools/: CMakeLists.txt
tools/transcribe-bench/: CMakeLists.txt  main.cpp
tools/transcribe-quantize/: CMakeLists.txt  README.md  main.cpp  policy.cpp  policy.h
(+744 files in other folders)
